k8s/backstageio/Namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: backstageio
  labels:
    pod-security.kubernetes.io/enforce: baseline
