k8s/backstageio/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: backstageio-service
  namespace: backstageio
spec:
  type: ClusterIP
  selector:
    app: backstageio
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 3000
