k8s/backstageio/NetworkPolicy .yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backstageio-policy
  namespace: backstageio
spec:
  podSelector:
    matchLabels:
      app: backstageio
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
  egress:
    - to:
        - podSelector: {}
